--- a/crd/myresource_crd.yaml
+++ b/crd/myresource_crd.yaml
@@ -1,1 +1,26 @@
-
+apiVersion: apiextensions.k8s.io/v1
+kind: CustomResourceDefinition
+metadata:
+  name: myresources.mydomain.com
+spec:
+  group: mydomain.com
+  versions:
+    - name: v1
+      served: true
+      storage: true
+      schema:
+        openAPIV3Schema:
+          type: object
+          properties:
+            spec:
+              type: object
+              properties:
+                configMapLabel:
+                  type: string
+  scope: Namespaced
+  names:
+    plural: myresources
+    singular: myresource
+    kind: MyResource
+    shortNames:
+      - mr
